# knowledge-importer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: converter-comparison.md  pdf-quality-evaluation.md
scripts/: __init__.py  compare_docling_modes.py  evaluate_pdf_quality.py
src/knowledge_importer/: __init__.py  __main__.py  cli.py  converter.py  logging_config.py  main.py  models.py
tests/: test_cli.py  test_converter.py  test_converter_comparison.py  test_quality_evaluation.py
