[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "knowledge-importer"
version = "0.1.0"
description = "Convert text-layer PDFs to Markdown locally."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "docling==2.113.0",
]

[project.scripts]
knowledge-importer = "knowledge_importer.main:main"

[dependency-groups]
dev = [
    "pypdf>=6.0.0,<7.0.0",
    "pytest>=8.4.0,<9.0.0",
    "reportlab>=5.0.0,<6.0.0",
    "ruff>=0.12.0,<0.13.0",
]

[tool.pytest.ini_options]
addopts = "-q --basetemp=.pytest-tmp"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
